<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Date and State Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/taskDateTextView"
                android:layout_width="248dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_fake"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?android:attr/listDivider" />

            <RadioButton
                android:id="@+id/doneRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/done_text"/>

        </LinearLayout>

        <!-- Description -->
        <TextView
            android:id="@+id/taskDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/description_fake"
            android:textStyle="bold"
            android:textSize="18sp" />

        <!-- Duration and Link Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/taskDurationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_fake"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <Space
                android:layout_width="48dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/taskLinkButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/docs_button_text"
                android:textColor="@color/white"/>
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>